[gd_scene load_steps=37 format=2]

[ext_resource path="res://UI/FrozencaScriptTypeface.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://IntroTitleScreen.gd" type="Script" id=2]
[ext_resource path="res://World/FelledSprite.png" type="Texture" id=3]
[ext_resource path="res://TitleMusic.tscn" type="PackedScene" id=4]
[ext_resource path="res://Effects/SnowFallOne.tscn" type="PackedScene" id=5]
[ext_resource path="res://World/TallTreeOne.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI/mountain_scape_1_dark.png" type="Texture" id=7]
[ext_resource path="res://Effects/LightningStrikeOne.tscn" type="PackedScene" id=8]
[ext_resource path="res://Music and Sounds/KOTWB_1_LOADSCREEN_1.wav" type="AudioStream" id=9]
[ext_resource path="res://Music and Sounds/KOTWB_CHIME_1.wav" type="AudioStream" id=10]
[ext_resource path="res://Music and Sounds/KOTWB_CHIME_2.wav" type="AudioStream" id=11]
[ext_resource path="res://fonts/PixelTandysoft-0rJG.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://UI/06 Border 01.png" type="Texture" id=13]
[ext_resource path="res://ControlsScreen.tscn" type="PackedScene" id=14]
[ext_resource path="res://UI/UI_Flat_Button_Medium_Lock_02a1 copy.png" type="Texture" id=15]
[ext_resource path="res://DemoOverviewScreen.tscn" type="PackedScene" id=16]

[sub_resource type="DynamicFont" id=1]
size = 27
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 10
font_data = ExtResource( 12 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.803922, 0.67451, 0.67451, 0.509804 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.117647, 0.109804, 0.109804, 0.52549 )

[sub_resource type="DynamicFont" id=7]
size = 10
font_data = ExtResource( 12 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.803922, 0.67451, 0.67451, 0.509804 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.117647, 0.109804, 0.109804, 0.52549 )

[sub_resource type="DynamicFont" id=8]
size = 10
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=9]
size = 10
font_data = ExtResource( 12 )

[sub_resource type="StyleBoxFlat" id=18]
content_margin_left = 0.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.8, 0.188235, 0.188235, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 3.0
expand_margin_right = 3.0
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxFlat" id=13]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.180392, 0.364706, 0.364706, 0.733333 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 3.0
expand_margin_right = 3.0
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="DynamicFont" id=11]
size = 10
font_data = ExtResource( 12 )

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="StyleBoxFlat" id=17]
content_margin_left = 0.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.8, 0.188235, 0.188235, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 3.0
expand_margin_right = 3.0
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxFlat" id=14]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.180392, 0.364706, 0.364706, 0.733333 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 3.0
expand_margin_right = 3.0
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="DynamicFont" id=19]
size = 10
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=20]
size = 10
font_data = ExtResource( 12 )

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0.184314, 0.0431373, 0.0196078, 0.827451 )

[node name="IntroTitleScreen" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 177, 83 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 7 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 70.0
margin_top = 22.0
margin_right = 251.0
margin_bottom = 90.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center] Keepers 
 [/center]"
text = " Keepers 
 "

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
margin_left = 48.0
margin_top = 47.0
margin_right = 360.0
margin_bottom = 115.0
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center] of the
 [/center]"
text = " of the
 "

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = 4.0
margin_top = 30.0
margin_right = 316.0
margin_bottom = 98.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center] 
 Winter Birch [/center]"
text = " 
 Winter Birch "

[node name="FelledBirch" type="Sprite" parent="."]
visible = false
position = Vector2( 163, 108 )
texture = ExtResource( 3 )

[node name="SnowFallOne" parent="." instance=ExtResource( 5 )]
visible = false
position = Vector2( 163, 83.75 )
scale = Vector2( 0.585, 1.025 )
animation = "New Anim"
frame = 6

[node name="SnowFallOne2" parent="." instance=ExtResource( 5 )]
modulate = Color( 1, 1, 1, 0.305882 )
position = Vector2( 83, 89.5 )
scale = Vector2( 1.6125, 1.81 )
animation = "New Anim"
frame = 6

[node name="SnowFallOne3" parent="." instance=ExtResource( 5 )]
modulate = Color( 1, 1, 1, 0.305882 )
position = Vector2( 241, 90 )
scale = Vector2( 1.6125, 1.82 )
animation = "New Anim"
frame = 5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 133.0
margin_top = 135.0
margin_right = 247.0
margin_bottom = 179.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="Button" type="Button" parent="VBoxContainer"]
margin_right = 114.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 6 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "Start"

[node name="Button2" type="Button" parent="VBoxContainer"]
margin_top = 17.0
margin_right = 114.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 7 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 4 )
text = "Options"

[node name="Button3" type="Button" parent="VBoxContainer"]
margin_top = 34.0
margin_right = 114.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 7 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 4 )
text = "Clear Data"

[node name="TitleMusic" parent="." instance=ExtResource( 4 )]
stream = ExtResource( 9 )

[node name="TallTreeOne" parent="." instance=ExtResource( 6 )]
position = Vector2( 5, 90 )

[node name="TallTreeOne2" parent="." instance=ExtResource( 6 )]
position = Vector2( 310, 90 )

[node name="Tween" type="Tween" parent="."]

[node name="LightningStrikeOne" parent="." instance=ExtResource( 8 )]
visible = false
position = Vector2( 70, 106 )
scale = Vector2( 0.553571, 0.589286 )

[node name="LightningTimer" type="Timer" parent="."]
wait_time = 7.0

[node name="LightningStrikeOne2" parent="." instance=ExtResource( 8 )]
position = Vector2( 255, 83 )
scale = Vector2( 0.419643, 0.303571 )

[node name="LightningTimerTwo" type="Timer" parent="."]
wait_time = 5.0

[node name="Button1Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -15.0

[node name="Button2Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -15.0
pitch_scale = 0.72

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PopupDialog" type="PopupDialog" parent="CanvasLayer"]
margin_left = 142.0
margin_top = 102.0
margin_right = 182.0
margin_bottom = 142.0

[node name="Sprite" type="Sprite" parent="CanvasLayer/PopupDialog"]
position = Vector2( 19, 20 )
texture = ExtResource( 15 )

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/PopupDialog"]
margin_left = -2.0
margin_top = 9.0
margin_right = 88.0
margin_bottom = 60.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/normal_font = SubResource( 8 )
bbcode_enabled = true
bbcode_text = "[center]Delete current save?"
text = "Delete current save?"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/PopupDialog"]
margin_left = -3.0
margin_top = 25.0
margin_right = 127.0
margin_bottom = 45.0
rect_scale = Vector2( 0.35, 0.35 )
custom_constants/separation = 22
alignment = 1

[node name="PopButton" type="Button" parent="CanvasLayer/PopupDialog/HBoxContainer"]
margin_left = 16.0
margin_right = 52.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 9 )
custom_styles/pressed = SubResource( 18 )
custom_styles/focus = SubResource( 13 )
custom_styles/normal = SubResource( 10 )
text = "Cancel"

[node name="PopButton2" type="Button" parent="CanvasLayer/PopupDialog/HBoxContainer"]
margin_left = 74.0
margin_right = 114.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 11 )
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/focus = SubResource( 14 )
custom_styles/normal = SubResource( 12 )
text = "Confirm"

[node name="PopupDialog2" type="PopupDialog" parent="CanvasLayer"]
margin_bottom = 1.0

[node name="Sprite" type="Sprite" parent="CanvasLayer/PopupDialog2"]
position = Vector2( 160, 100 )
texture = ExtResource( 13 )

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/PopupDialog2/Sprite"]
margin_left = -20.0
margin_top = -25.0
margin_right = 21.0
margin_bottom = 6.0
custom_fonts/normal_font = SubResource( 19 )
bbcode_enabled = true
bbcode_text = "OPTIONS"
text = "OPTIONS"

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PopupDialog2"]
margin_left = 132.5
margin_top = 92.0
margin_right = 242.5
margin_bottom = 139.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="ControlsButton" type="Button" parent="CanvasLayer/PopupDialog2/VBoxContainer"]
margin_right = 110.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 6 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "CONTROLS"

[node name="TutorialButton" type="Button" parent="CanvasLayer/PopupDialog2/VBoxContainer"]
margin_top = 17.0
margin_right = 110.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 7 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 4 )
text = "TUTORIAL"

[node name="DemoButton" type="Button" parent="CanvasLayer/PopupDialog2/VBoxContainer"]
margin_top = 34.0
margin_right = 110.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 7 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 4 )
text = "DEMO INFO"

[node name="ControlScreen" parent="CanvasLayer" instance=ExtResource( 14 )]

[node name="Popup" type="Popup" parent="CanvasLayer"]
visible = true
margin_right = 40.0
margin_bottom = 40.0

[node name="ReturnButton" type="Button" parent="CanvasLayer/Popup"]
margin_left = 7.0
margin_top = 6.0
margin_right = 61.0
margin_bottom = 26.0
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/font = SubResource( 20 )
custom_styles/normal = SubResource( 21 )
text = "Return"

[node name="DemoOverviewScreen" parent="CanvasLayer" instance=ExtResource( 16 )]
visible = false

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="animation_finished" from="LightningStrikeOne" to="." method="_on_LightningStrikeOne_animation_finished"]
[connection signal="timeout" from="LightningTimer" to="." method="_on_LightningTimer_timeout"]
[connection signal="animation_finished" from="LightningStrikeOne2" to="." method="_on_LightningStrikeOne2_animation_finished"]
[connection signal="timeout" from="LightningTimerTwo" to="." method="_on_LightningTimerTwo_timeout"]
[connection signal="pressed" from="CanvasLayer/PopupDialog/HBoxContainer/PopButton" to="." method="_on_PopButton_pressed"]
[connection signal="pressed" from="CanvasLayer/PopupDialog/HBoxContainer/PopButton2" to="." method="_on_PopButton2_pressed"]
[connection signal="pressed" from="CanvasLayer/PopupDialog2/VBoxContainer/ControlsButton" to="." method="_on_ControlsButton_pressed"]
[connection signal="pressed" from="CanvasLayer/PopupDialog2/VBoxContainer/TutorialButton" to="." method="_on_TutorialButton_pressed"]
[connection signal="pressed" from="CanvasLayer/PopupDialog2/VBoxContainer/DemoButton" to="." method="_on_DemoButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Popup/ReturnButton" to="." method="_on_ReturnButton_pressed"]

[editable path="CanvasLayer/ControlScreen"]
